# miru-core-lib

./: README.md  meson.build  meson.options
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
compat/: build.py  meson.build
inject/: inject-glue.c  inject-glue.h  inject.vala  meson.build  miru-inject.xcent
lib/agent/: agent-glue.c  agent.vala  meson.build  miru-agent-android.version  miru-agent-x86.symbols  miru-agent.def  miru-agent.symbols  miru-agent.version
lib/base/: buffer-glue.c  buffer.vala  channel.vala  corefoundation.vala  dbus.vala  fs.vala  linux.vala  meson.build  miru-atomics.h  miru-atomics.vapi  miru-darwin.c  miru-darwin.h  miru-linux-bpf.h  miru-linux-perf-event.h  miru-linux.vapi  miru-tvos.h  p2p-glue.c  p2p.vala  posix.vala  promise.vala  rpc.vala  service.vala  session-glue.c  session.vala  socket-glue.c  socket.vala  stream.vala  value.vala  windows.vala  xpc.vala
lib/gadget/: gadget-glue.c  gadget.vala  meson.build
lib/selinux/: meson.build  miru-selinux.h  patch.c
portal/: meson.build  portal.vala
releng/: deps.py  deps.toml  devkit.py  env.py  env_generic.py  make-changelog.sh  meson_configure.py  meson_make.py  miru_version.py  mkdevkit.py  sync-from-upstream.py
releng/meson/test cases/frameworks/7 gnome/mdbus/: mdbusprog.c  meson.build
server/: meson.build  miru-server.plist  miru-server.xcent  server-darwin.h  server-glue.c  server-glue.h  server-ios-tvos.c  server-ios-tvos.h  server.vala
src/: agent-container.vala  agent.resources  android.resources  async-task.vala  control-service.vala  embed-agent.py  embed-helper.py  file-monitor.vala  helper.resources  host-session-service.vala  mdb.vala  meson.build  miru-glue.c  miru.vala  package-manager.vala  portal-service.vala  system.vala
src/android-helper/: Makefile  client.vala  helper.dex
src/android-helper/re/miru/: Helper.java
src/api/: generate.py  meson.build
src/barebone/: agent-connection.vala  allocator.vala  barebone-host-session.vala  barebone.resources  c-module.vala  callback.vala  config.vala  console.vala  elf.vala  img4.vala  interceptor.vala  layout.vala  lzfse.vala  machine.vala  memory-scanner.vala  meson.build  package-lock.json  package.json  qmp-client.vala  rust-module.vala  script.vala
src/barebone/agent/: Cargo.toml  README.md  env.sh  explore.ts  package.json  start_qemu.sh
src/barebone/agent/etc/: physical.json  xnu.json
src/barebone/agent/tools/: aic.js
src/barebone/arch-arm/: machine.vala
src/barebone/arch-arm64/: machine.vala
src/barebone/arch-unknown/: machine.vala
src/barebone/arch-x86/: machine.vala
src/barebone/arch-x86_64/: machine.vala
src/barebone/script-runtime/: mdb.ts  message-dispatcher.ts  primitives.ts
src/compiler/: backend-glue.c  backend.go  backend.version  build-backend.py  compiler.resources  compiler.vala  meson.build  package-lock.json  package.json  shims.go
src/darwin/: darwin-host-session.vala  fruitjector.vala  icon-helpers.h  miru-helper-backend-glue.m  miru-helper-backend.vala  miru-helper-null-backend.vala  miru-helper-process.vala  miru-helper-service-glue.h  miru-helper-service.vala  miru-helper-types.vala  policy-softener-glue.c  policy-softener.vala  policyd-client.c  policyd-client.h  policyd-server.c  policyd-server.h  policyd.c  policyd.h  springboard.h  substituted-client.h  substituted2-client.h
src/darwin/agent/: launchd.js
src/darwin/agent/osanalytics/: index.js  package-lock.json  package.json
src/darwin/agent/reportcrash/: index.js  package-lock.json  package.json
src/devkit/: meson.build
src/droidy/: axml.vala  droidy-client.vala  droidy-host-session.vala  injector.vala  jdwp.vala
src/freebsd/: binjector-glue.c  binjector.vala  freebsd-host-session.vala  system-freebsd.c
src/fruity/: debugger-mappings.vala  device-monitor-linux.vala  device-monitor-macos.vala  device-monitor-unix.c  device-monitor-windows.c  device-monitor-windows.vala  device-monitor.vala  dns.vala  dtx.vala  fruity-host-session.vala  injector.vala  installation-proxy.vala  keyed-archive.vala  lockdown.vala  mldb.vala  ncm.vala  network-stack.vala  opack.vala  plist-service.vala  plist.vala  springboard-services.vala  usb.vala  usbmux.vala  xpc.vala
src/fruity/helpers/: symbol-fetcher.c  symbol-resolver.c  upload-api.h  upload-listener.c  upload-receiver.c
src/linux/: activity-sampler.vala  linjector-glue.c  linjector.vala  linux-host-session.vala  miru-helper-backend-glue.c  miru-helper-backend-types.c  miru-helper-backend.resources  miru-helper-backend.vala  miru-helper-process.vala  miru-helper-service.vala  miru-helper-types.vala  proc-maps.vala  supersu.vala  symbol-resolver.vala  syscall-tracer.vala  system-linux.c
src/linux/helpers/: Makefile  bootstrapper.c  elf-parser.c  elf-parser.h  inject-context.h  loader.c  meson.build  rebuild.sh  syscall-tracer.bpf.c  syscall.c  syscall.h  zymbiote.c
src/qnx/: qinjector-glue.c  qinjector.vala  qnx-host-session.vala  system-qnx.c
src/simmy/: simmy-host-session-glue.m  simmy-host-session.vala  text-plist.vala
src/socket/: socket-host-session.vala
src/windows/: access-helpers.c  access-helpers.h  icon-helpers.c  icon-helpers.h  miru-helper-backend-glue.c  miru-helper-backend.vala  miru-helper-process-glue.c  miru-helper-process-glue.h  miru-helper-process.vala  miru-helper-service-glue.c  miru-helper-service-glue.h  miru-helper-service.vala  miru-helper-types.vala  system-windows.c  wait-handle-source.c  windows-host-session-glue.c  windows-host-session.vala  winjector-glue.c  winjector.vala
tests/: async-harness.vala  labrats.vala  main.vala  meson.build  process-resource-usage.c  process-unix.c  process-windows.c  process.vala  profile-compiler.sh  run-android.sh  run-ios.sh  run-linux-vm.sh  run-linux-x86_64.sh  run-macos.sh  runner-glue.c  runner.vala  test-agent-glue.c  test-agent.vala  test-compiler.vala  test-gadget.vala  test-host-session.vala  test-injector.vala  test-system.vala  vm.py
tools/: detect-version.py  meson.build  package-server-fruity.sh  post-process.py  resource-compiler.vala  symbolicate.py
(+94 files in other folders)
