option('miru_version',
  type: 'string',
  value: '',
  description: 'Miru version, such as 16.2.2 or 16.2.2-dev.27',
)

option('local_backend',
  type: 'feature',
  value: 'enabled',
  description: 'Include backend for the local system',
)

option('simmy_backend',
  type: 'feature',
  value: 'disabled',
  description: 'Include the iDevice Simulator backend',
)

option('fruity_backend',
  type: 'feature',
  value: 'enabled',
  description: 'Include the Fruity backend',
)

option('droidy_backend',
  type: 'feature',
  value: 'enabled',
  description: 'Include the Droidy backend',
)

option('socket_backend',
  type: 'feature',
  value: 'enabled',
  description: 'Include the Socket backend',
)

option('barebone_backend',
  type: 'feature',
  value: 'enabled',
  description: 'Include the Barebone backend',
)

option('compiler_backend',
  type: 'feature',
  value: 'disabled',
  description: 'Include miru-compile backend powered by ESBuild and typescript-go',
)

option('assets',
  type: 'combo',
  choices: ['embedded', 'installed'],
  value: 'embedded',
  description: 'Whether assets such as miru-agent should be embedded vs installed and loaded at runtime'
)

option('asset_path_template',
  type: 'string',
  description: 'Override the default installed asset path template'
)

option('compat',
  type: 'array',
  choices: ['auto', 'disabled', 'native', 'emulated'],
  value: ['native', 'emulated'],
  description: 'Support for targets with a different architecture',
)

option('helper_modern',
  type: 'string',
  value: 'auto',
  description: 'Prebuilt miru-helper to embed for supporting modern targets'
)

option('helper_legacy',
  type: 'string',
  value: 'auto',
  description: 'Prebuilt miru-helper to embed for supporting legacy targets'
)

option('helper_emulated_modern',
  type: 'string',
  value: 'auto',
  description: 'Prebuilt miru-helper to embed for supporting modern emulated targets'
)

option('helper_emulated_legacy',
  type: 'string',
  value: 'auto',
  description: 'Prebuilt miru-helper to embed for supporting legacy emulated targets'
)

option('agent_modern',
  type: 'string',
  value: 'auto',
  description: 'Prebuilt agent to embed for use on modern targets'
)

option('agent_legacy',
  type: 'string',
  value: 'auto',
  description: 'Prebuilt agent to embed for use on legacy targets'
)

option('agent_emulated_modern',
  type: 'string',
  value: 'auto',
  description: 'Prebuilt agent to embed for use on modern emulated targets'
)

option('agent_emulated_legacy',
  type: 'string',
  value: 'auto',
  description: 'Prebuilt agent to embed for use on legacy emulated targets'
)

option('gadget',
  type: 'feature',
  value: 'enabled',
  description: 'Build miru-gadget',
)

option('server',
  type: 'feature',
  value: 'enabled',
  description: 'Build miru-server',
)

option('portal',
  type: 'feature',
  value: 'enabled',
  description: 'Build miru-portal',
)

option('inject',
  type: 'feature',
  value: 'enabled',
  description: 'Build miru-inject',
)

option('connectivity',
  type: 'feature',
  value: 'enabled',
  description: 'Internet connectivity features (TLS and ICE support)'
)

option('mapper',
  type: 'feature',
  value: 'enabled',
  description: 'Use our own out-of-process dynamic linker for injection on i/macOS'
)

option('devkits',
  type: 'array',
  choices: ['core'],
  value: [],
  description: 'Devkits to build'
)

option('devkit_symbol_scope',
  type: 'combo',
  choices: ['prefixed', 'original'],
  value: 'prefixed',
  description : 'How devkit generation treats third-party symbols:\n'
                + ' - prefixed: add the \'_miru_\' prefix\n'
                + ' - original: keep symbols exactly as upstream\n'
)

option('tests',
  type: 'feature',
  value: 'enabled',
  description: 'Build tests'
)
